add python 3.11 support

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,9 @@ package:
    version: {{ version }}
 
 source:
-  url: https://files.pythonhosted.org/packages/{{ url_part }}/array_record-{{ version }}-py{{ python | replace(".", "") }}-none-any.whl
+  git_url: https://github.com/google/array_record.git   #[py==311]
+  git_rev: v{{version}}                                 #[py==311]
+  url: https://files.pythonhosted.org/packages/{{ url_part }}/array_record-{{ version }}-py{{ python | replace(".", "") }}-none-any.whl  #[py<311]
   sha256: 4b9335c7e21b54f559bada68b26f79309903015ff65101d4a3c3c42c62658398   #[py==310]
   sha256: d3b9a3a0d11f43a06a37fd8129d78e2894d7ff65b5fa53def198698c5592562a   #[py==39]
   sha256: 12ce6844f8acb2e65f0bc4d8bcecbe19ac45a39cd2ba5bb56828668f118b1e87   #[py==38]
@@ -18,7 +20,7 @@ source:
 build:
   number: 1
   string: py{{ python | replace(".", "") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}
-  script: "python -m pip install array_record-{{ version }}*.whl --no-deps --ignore-installed --no-cache-dir -vvv"
+  script: "python -m pip install array_record-{{ version }}*.whl --no-deps --ignore-installed --no-cache-dir -vvv"  #[py<311]
 
 requirements:
   host:
